--- a/반응형_레이아웃변화1.html
+++ b/반응형_레이아웃변화1.html
@@ -113,6 +113,12 @@
         }
 
         /* 414px */
+        /* - 컨테이너 중심축 : 1280px, 1440px, 1600px 
+           - 메뉴 변경(햄버거 아이콘 변경될 때) : 1024px (태블릿 시작)
+           - 모바일 : 414px, 640px
+           - 최소화면크기 : 320px까지..
+           - 갤럭시 폴드 : 260px
+        */        
     </style>
 </head>
 
